--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/deliveryapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
