Front End Get Funcional

--- a/deliveryfrontend/package.json
+++ b/deliveryfrontend/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "bootstrap": "^5.0.0-beta3",
     "jquery": "^3.6.0",
+    "ng2-currency-mask": "^9.0.2",
     "popper.js": "^1.16.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
